@@ -118,7 +118,7 @@ public class AuditRestController {
 
         // Convert to response format expected by frontend
         List<AuditEventDto> eventDtos =
-                events.getContent().stream().map(this::convertToDto).collect(Collectors.toList());
+                events.getContent().stream().map(this::convertToDto).toList();
 
         AuditEventsResponse response =
                 AuditEventsResponse.builder()
@@ -191,19 +191,13 @@ public class AuditRestController {
         ChartData eventsByTypeChart =
                 ChartData.builder()
                         .labels(new ArrayList<>(eventsByType.keySet()))
-                        .values(
-                                eventsByType.values().stream()
-                                        .map(Long::intValue)
-                                        .collect(Collectors.toList()))
+                        .values(eventsByType.values().stream().map(Long::intValue).toList())
                         .build();
 
         ChartData eventsByUserChart =
                 ChartData.builder()
                         .labels(new ArrayList<>(eventsByUser.keySet()))
-                        .values(
-                                eventsByUser.values().stream()
-                                        .map(Long::intValue)
-                                        .collect(Collectors.toList()))
+                        .values(eventsByUser.values().stream().map(Long::intValue).toList())
                         .build();
 
         // Sort events by day for time series
@@ -211,10 +205,7 @@ public class AuditRestController {
         ChartData eventsOverTimeChart =
                 ChartData.builder()
                         .labels(new ArrayList<>(sortedEventsByDay.keySet()))
-                        .values(
-                                sortedEventsByDay.values().stream()
-                                        .map(Long::intValue)
-                                        .collect(Collectors.toList()))
+                        .values(sortedEventsByDay.values().stream().map(Long::intValue).toList())
                         .build();
 
         AuditChartsData chartsData =
@@ -239,16 +230,14 @@ public class AuditRestController {
 
         // Include standard enum types in case they're not in the database yet
         List<String> enumTypes =
-                Arrays.stream(AuditEventType.values())
-                        .map(AuditEventType::name)
-                        .collect(Collectors.toList());
+                Arrays.stream(AuditEventType.values()).map(AuditEventType::name).toList();
 
         // Combine both sources, remove duplicates, and sort
         Set<String> combinedTypes = new HashSet<>();
         combinedTypes.addAll(dbTypes);
         combinedTypes.addAll(enumTypes);
 
-        List<String> result = combinedTypes.stream().sorted().collect(Collectors.toList());
+        List<String> result = combinedTypes.stream().sorted().toList();
 
         return ResponseEntity.ok(result);
     }
@@ -263,11 +252,7 @@ public class AuditRestController {
         // Use the countByPrincipal query to get unique principals
         List<Object[]> principalCounts = auditRepository.countByPrincipal();
 
-        List<String> users =
-                principalCounts.stream()
-                        .map(arr -> (String) arr[0])
-                        .sorted()
-                        .collect(Collectors.toList());
+        List<String> users = principalCounts.stream().map(arr -> (String) arr[0]).sorted().toList();
 
         return ResponseEntity.ok(users);
     }
