@@ -76,7 +76,7 @@ public class SigningSessionController {
                             .map(
                                     stirling.software.proprietary.workflow.util.WorkflowMapper
                                             ::toResponse)
-                            .collect(java.util.stream.Collectors.toList());
+                            .toList();
             return ResponseEntity.ok(responses);
         } catch (Exception e) {
             log.error("Error listing sessions for user {}", principal.getName(), e);
